filter modifier and Rest structure controller